--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <a href="/"><span>Royal</span> Cinema</a>
+        <a href="./index.html"><span>Royal</span> Cinema</a>
     </nav>
 
     <div  class="cards">
